# lxrs

./: Cargo.toml  README.md  your_program.sh
.codecrafters/: compile.sh  run.sh
src/: lib.rs
tests/: empty_file.rs  stage_4.rs  stage_5.rs  stage_6.rs  stage_7.rs
