[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["mxxntype"]
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "lxrs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
indoc = "2.0.5"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.38"
